--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -40,7 +40,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          - ref: 'test/github_test'
+          ref: 'test/github_test'
       - env:
           EVENT_CONTEXT: ${{ toJSON(github.event) }}
         run: |
