--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,7 +1,7 @@
 name: Publish Artifacts
 on:
   release:
-    types: [created, released]
+#    types: [created, released]
 #    types: [created]
   push:
     branches:
