--- a/.github/workflows/patch.yaml
+++ b/.github/workflows/patch.yaml
@@ -6,12 +6,12 @@ jobs:
   delete_patches_on_release:
     runs-on: ubuntu-latest
     # currently only releases in main branch are considered
-    if: github.event.release.target_commitish == 'main'
+    if: github.event.release.target_commitish == 'main' || endsWith(github.event.release.target_commitish, '_branch')
     steps:
       - uses: actions/checkout@v2
         with:
           # By default, tag is checked out. It needs to check out branch to commit to.
-          ref: 'main'
+          ref: ${{ github.event.release.target_commitish }}
       - run: |
          find kubemarine/patches/ -not -path "kubemarine/patches/__init__.py" -not -path "kubemarine/patches/" -delete
          cp kubemarine/resources/etalons/patches/__init__.py kubemarine/patches/__init__.py
