--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -662,12 +662,11 @@ rbac:
           kind: ClusterRole
         subjects:
           - kind: ServiceAccount
-    addition_configs:
-      apiVersion: v1
-      kind: Secret
-      metadata:
-        annotations: {}
-      type: kubernetes.io/service-account-token
+      - apiVersion: v1
+        kind: Secret
+        metadata:
+          annotations: {}
+        type: kubernetes.io/service-account-token
 
   admission: psp
   psp:
