[MANOPD-76560] New approach for token processing (#175)
* New approach for token processing

* New approach for token processing with different defaults; small fix

* Token loading retries; useless module

* Doc update

* Update Installation.md

Co-authored-by: shmo1218 <94443646+shmo1218@users.noreply.github.com>

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -662,6 +662,12 @@ rbac:
           kind: ClusterRole
         subjects:
           - kind: ServiceAccount
+      - apiVersion: v1
+        kind: Secret
+        metadata:
+          annotations: {}
+        type: kubernetes.io/service-account-token
+
   admission: psp
   psp:
     pod-security: enabled
