--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -324,6 +324,10 @@ services:
             - 'docker-ce={{ globals.compatibility_map.software.docker[services.kubeadm.kubernetesVersion].version_debian }}'
             - 'docker-ce-cli={{ globals.compatibility_map.software.docker[services.kubeadm.kubernetesVersion].version_debian }}'
             - 'containerd.io={{ globals.compatibility_map.software.containerdio[services.kubeadm.kubernetesVersion].version_debian }}'
+          package_name_alt:
+            - 'docker-ce'
+            - 'docker-ce-cli'
+            - 'containerd.io'
           service_name: 'docker'
           config_location: '/etc/docker/daemon.json'
         containerd:
@@ -331,21 +335,27 @@ services:
           package_name:
             - 'containerd={{ globals.compatibility_map.software.containerd[services.kubeadm.kubernetesVersion].version_debian }}'
             - 'podman={{ globals.compatibility_map.software.podman[services.kubeadm.kubernetesVersion].version_debian }}'
+          package_name_alt:
+            - 'containerd'
+            - 'podman'
           service_name: 'containerd'
           config_location: '/etc/containerd/config.toml'
         haproxy:
           executable_name: '/usr/sbin/haproxy'
           package_name: 'haproxy={{ globals.compatibility_map.software.haproxy[services.kubeadm.kubernetesVersion].version_debian }}'
+          package_name_alt: 'haproxy'
           service_name: 'haproxy'
           config_location: '/etc/haproxy/haproxy.cfg'
         keepalived:
           executable_name: 'keepalived'
           package_name: 'keepalived={{ globals.compatibility_map.software.keepalived[services.kubeadm.kubernetesVersion].version_debian }}'
+          package_name_alt: 'keepalived'
           service_name: 'keepalived'
           config_location: '/etc/keepalived/keepalived.conf'
         audit:
           executable_name: 'auditctl'
           package_name: 'auditd'
+          package_name_alt: 'auditd'
           service_name: 'auditd'
           config_location: '/etc/audit/rules.d/predefined.rules'
       rhel:
@@ -355,6 +365,10 @@ services:
             - 'docker-ce-{{ globals.compatibility_map.software.docker[services.kubeadm.kubernetesVersion].version_rhel }}'
             - 'docker-ce-cli-{{ globals.compatibility_map.software.docker[services.kubeadm.kubernetesVersion].version_rhel }}'
             - 'containerd.io-{{ globals.compatibility_map.software.containerdio[services.kubeadm.kubernetesVersion].version_rhel }}'
+          package_name_alt:
+            - 'docker-ce'
+            - 'docker-ce-cli'
+            - 'containerd.io'
           service_name: 'docker'
           config_location: '/etc/docker/daemon.json'
         containerd:
@@ -362,21 +376,27 @@ services:
           package_name:
             - 'containerd.io-{{ globals.compatibility_map.software.containerdio[services.kubeadm.kubernetesVersion].version_rhel }}'
             - 'podman-{{ globals.compatibility_map.software.podman[services.kubeadm.kubernetesVersion].version_rhel }}'
+          package_name_alt:
+            - 'containerd.io'
+            - 'podman'
           service_name: 'containerd'
           config_location: '/etc/containerd/config.toml'
         haproxy:
           executable_name: '/opt/rh/rh-haproxy18/root/usr/sbin/haproxy'
           package_name: 'rh-haproxy18-haproxy-{{ globals.compatibility_map.software.haproxy[services.kubeadm.kubernetesVersion].version_rhel }}'
+          package_name_alt: 'rh-haproxy18-haproxy'
           service_name: 'rh-haproxy18-haproxy'
           config_location: '/etc/haproxy/haproxy.cfg'
         keepalived:
           executable_name: 'keepalived'
           package_name: 'keepalived-{{ globals.compatibility_map.software.keepalived[services.kubeadm.kubernetesVersion].version_rhel }}'
+          package_name_alt: 'keepalived'
           service_name: 'keepalived'
           config_location: '/etc/keepalived/keepalived.conf'
         audit:
           executable_name: 'auditctl'
           package_name: 'auditd'
+          package_name_alt: 'auditd'
           service_name: 'auditd'
           config_location: '/etc/audit/rules.d/predefined.rules'
       rhel8:
@@ -386,6 +406,10 @@ services:
             - 'docker-ce-{{ globals.compatibility_map.software.docker[services.kubeadm.kubernetesVersion].version_rhel8 }}'
             - 'docker-ce-cli-{{ globals.compatibility_map.software.docker[services.kubeadm.kubernetesVersion].version_rhel8 }}'
             - 'containerd.io-{{ globals.compatibility_map.software.containerdio[services.kubeadm.kubernetesVersion].version_rhel8 }}'
+          package_name_alt:
+            - 'docker-ce'
+            - 'docker-ce-cli'
+            - 'containerd.io'
           service_name: 'docker'
           config_location: '/etc/docker/daemon.json'
         containerd:
@@ -393,21 +417,27 @@ services:
           package_name:
             - 'containerd-{{ globals.compatibility_map.software.containerd[services.kubeadm.kubernetesVersion].version_rhel8 }}'
             - 'podman-{{ globals.compatibility_map.software.podman[services.kubeadm.kubernetesVersion].version_rhel8 }}'
+          package_name_alt:
+            - 'containerd'
+            - 'podman'
           service_name: 'containerd'
           config_location: '/etc/containerd/config.toml'
         haproxy:
           executable_name: '/usr/sbin/haproxy'
           package_name: 'haproxy-{{ globals.compatibility_map.software.haproxy[services.kubeadm.kubernetesVersion].version_rhel8 }}'
+          package_name_alt: 'haproxy'
           service_name: 'haproxy'
           config_location: '/etc/haproxy/haproxy.cfg'
         keepalived:
           executable_name: 'keepalived'
           package_name: 'keepalived-{{ globals.compatibility_map.software.keepalived[services.kubeadm.kubernetesVersion].version_rhel8 }}'
+          package_name_alt: 'keepalived'
           service_name: 'keepalived'
           config_location: '/etc/keepalived/keepalived.conf'
         audit:
           executable_name: 'auditctl'
           package_name: 'auditd'
+          package_name_alt: 'auditd'
           service_name: 'auditd'
           config_location: '/etc/audit/rules.d/predefined.rules'
  
