--- a/examples/cluster.yaml/full-cluster.yaml
+++ b/examples/cluster.yaml/full-cluster.yaml
@@ -432,6 +432,7 @@ plugins:
             http:
               paths:
                 - path: /
+                  pathType: Prefix
                   backend:
                     service:
                       name: kubernetes-dashboard
