[PSUPCLPL-9933] Update kubernetes-dashboard plugin description in Installation.md (#183)
* Update kubernetes-plugin description in Installation.md

* update cluster.yaml/full-cluster.yaml example in kubernetes-dashboard part

* add pathType: Prefix to dashboard yaml

Co-authored-by: oshift_cluster <oshiftcluster@netcracker.com>

--- a/examples/cluster.yaml/full-cluster.yaml
+++ b/examples/cluster.yaml/full-cluster.yaml
@@ -432,9 +432,12 @@ plugins:
             http:
               paths:
                 - path: /
+                  pathType: Prefix
                   backend:
-                    serviceName: kubernetes-dashboard
-                    servicePort: 443
+                    service:
+                      name: kubernetes-dashboard
+                      port:
+                        number: 443
 
   sock-shop:
     install: true
