'secrets' section for ServiceAccount

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -654,6 +654,7 @@ rbac:
       - apiVersion: v1
         kind: ServiceAccount
         metadata: {}
+        secrets: []
       - apiVersion: rbac.authorization.k8s.io/v1
         kind: ClusterRoleBinding
         metadata: {}
