--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -15,9 +15,7 @@ services:
     podPidsLimit: 4096
     cgroupDriver: systemd
   kubeadm_flags:
-    ignorePreflightErrors:
-      - Port-6443
-      - CoreDNSUnsupportedPlugins
+    ignorePreflightErrors: Port-6443,CoreDNSUnsupportedPlugins
   kubeadm:
     apiVersion: kubeadm.k8s.io/v1beta2
     kind: ClusterConfiguration
