[MANOPD-77175] add ignorePreflightErrors support (#185)
* add ignorePreflightErrors support

* change ignorePreflightErrors format

* add mandatory PreflightErrors from defaults.yaml

Co-authored-by: oshift_cluster <oshiftcluster@netcracker.com>

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -14,6 +14,8 @@ services:
     protectKernelDefaults: true
     podPidsLimit: 4096
     cgroupDriver: systemd
+  kubeadm_flags:
+    ignorePreflightErrors: Port-6443,CoreDNSUnsupportedPlugins
   kubeadm:
     apiVersion: kubeadm.k8s.io/v1beta2
     kind: ClusterConfiguration
