[MANOPD-77460] Support DR network configuration automation in Calico and CoreDNS (#189)
* calico coredns

* fix

* redundant

* coredns doc

* calico doc

* Update Installation.md

* Update Installation.md

Co-authored-by: koryaga <5212888+koryaga@users.noreply.github.com>

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -425,15 +425,6 @@ plugins:
       priority: 0
       procedures:
         - template: 'templates/plugins/calico-{{ plugins.calico.version|minorversion }}.yaml.j2'
-        - expect:
-            daemonsets:
-              - calico-node
-            deployments:
-              - calico-kube-controllers
-            pods:
-              - coredns
-              - calico-kube-controllers
-              - calico-node
         - thirdparty: /usr/bin/calicoctl
         - shell:
             command: mkdir -p /etc/calico
@@ -454,11 +445,23 @@ plugins:
             apply_required: true
             apply_command: /bin/sh /tmp/calico_rr.sh
             sudo: true
+        - expect:
+            daemonsets:
+              - calico-node
+            deployments:
+              - calico-kube-controllers
+            pods:
+              - coredns
+              - calico-kube-controllers
+              - calico-node
     mode: ipip
     crossSubnet: true
     natOutgoing: true
     mtu: 1440
     fullmesh: true
+    announceServices: false
+    defaultAsNumber: 64512
+    globalBgpPeers: []
     typha:
       enabled: false
       replicas: '{{ (((nodes|length)/50) + 1) | round(1) | int }}'
