update calico defaults: disable FELIX_USAGEREPORTINGENABLED

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -498,6 +498,7 @@ plugins:
       FELIX_DEFAULTENDPOINTTOHOSTACTION: ACCEPT
       FELIX_LOGSEVERITYSCREEN: info
       FELIX_HEALTHENABLED: true
+      FELIX_USAGEREPORTINGENABLED: false
     cni:
       image: 'calico/cni:{{ plugins.calico.version }}'
       ipam:
