Fixed patch autodeletion workflow
Added support for protected branches. The job checkouts the branch using PAT of NetcrackerCLPLCI user which has grants to push to protected branches.

--- a/.github/workflows/patch.yaml
+++ b/.github/workflows/patch.yaml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
+          token: ${{ secrets.NCCLPLCI_PAT }}
           # By default, tag is checked out. It needs to check out branch to commit to.
           ref: ${{ github.event.release.target_commitish }}
       - run: |
