fix 224 check of check_paas procedure

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -505,6 +505,7 @@ plugins:
             key: typha_service_name
       NODENAME:
           fieldRef:
+            apiVersion: v1
             fieldPath: spec.nodeName
       CALICO_NETWORKING_BACKEND:
           configMapKeyRef:
