--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -473,8 +473,10 @@ plugins:
     defaultAsNumber: 64512
     globalBgpPeers: []
     typha:
-      enabled: false
-      replicas: '{{ (((nodes|length)/50) + 1) | round(1) | int }}'
+      # enabled by default for envs with nodes > 3
+      enabled: '{% if (nodes|length) < 4 %}false{% else %}true{% endif %}'
+      # let's start from 2 replicas and increment it every 50 nodes
+      replicas: '{{ (((nodes|length)/50) + 2) | round(1) | int }}'
       image: 'calico/typha:{{ plugins.calico.version }}'
       nodeSelector:
         kubernetes.io/os: linux
