build single kubemarine

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,13 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
       - name: Build Binary via Docker
-        run: docker build -t kubemarine --build-arg BUILD_TYPE=binary --no-cache .
+        run: |
+          docker build -t ${GITHUB_REPOSITORY#*/}_binary --build-arg BUILD_TYPE=binary --no-cache .
+          CONTAINER=$(docker create "${GITHUB_REPOSITORY#*/}_binary")
+          docker cp "${CONTAINER}:/opt/kubemarine/dist/kubemarine" kubemarine
+          chmod +x kubemarine
+          docker rm -v "${CONTAINER}"
+
   build-package:
     runs-on: ubuntu-latest
     steps:
