--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,11 +18,11 @@ jobs:
         uses: actions/checkout@v2
       - name: Build Binary via Docker
         run: |
-          docker build -t ${GITHUB_REPOSITORY#*/}_binary --build-arg BUILD_TYPE=binary --no-cache .
-          CONTAINER=$(docker create "${GITHUB_REPOSITORY#*/}_binary")
-          docker cp "${CONTAINER}:/opt/kubemarine/dist/kubemarine" kubemarine
+          docker build -t ${GITHUB_RUN_ID}_binary --build-arg BUILD_TYPE=binary --no-cache .
+          CONTAINER_ID=$(docker create "${GITHUB_RUN_ID}_binary")
+          docker cp "${CONTAINER_ID}:/opt/kubemarine/dist/kubemarine" kubemarine
           chmod +x kubemarine
-          docker rm -v "${CONTAINER}"
+          docker rm -v "${CONTAINER_ID}"
 
   build-package:
     runs-on: ubuntu-latest
