--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,8 +18,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Build Binary via Docker
         run: docker build -t ${GITHUB_RUN_ID}_binary --build-arg BUILD_TYPE=binary --no-cache .
-      - name: Copy Kubemaribe
-        rub: |
+      - name: Copy Kubemarine
+        run: |
           CONTAINER_ID=$(docker create "${GITHUB_RUN_ID}_binary")
           docker cp "${CONTAINER_ID}:/opt/kubemarine/dist/kubemarine" kubemarine
           chmod +x kubemarine
