--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,13 +24,12 @@ jobs:
         run: |
           pwd
           CONTAINER_ID=$(docker create "${GITHUB_RUN_ID}_binary")
-          docker cp "${CONTAINER_ID}:/home/runner/work/KubeMarine kubemarines
+          docker cp "${CONTAINER_ID}:/opt/kubemarine/bin/kubemarine" kubemarines
           chmod +x kubemarines
           docker rm -v "${CONTAINER_ID}"
         with:
           name: kubemarines
           path: kubemarines
-          retention-days: 1
 
   build-package:
     runs-on: ubuntu-latest
