--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - '**'
-
 jobs:
   build-image:
     runs-on: ubuntu-latest
@@ -18,18 +17,18 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
       - name: Build Binary via Docker
-        run: docker build -t ${GITHUB_RUN_ID}_binary --build-arg BUILD_TYPE=binary --no-cache .
+        run: |
+          docker build -t ${GITHUB_RUN_ID}_binary --build-arg BUILD_TYPE=binary --no-cache .
+          CONTAINER_ID=$(docker create "${GITHUB_RUN_ID}_binary")
+          docker cp "${CONTAINER_ID}:/opt/kubemarine/dist/kubemarine" kubemarine
+          chmod +x kubemarine
+          docker rm -v "${CONTAINER_ID}"
       - name: Copy Kubemarine
         uses: actions/upload-artifact@v3
-        run: |
-          pwd
-          CONTAINER_ID=$(docker create "${GITHUB_RUN_ID}_binary")
-          docker cp "${CONTAINER_ID}:/opt/kubemarine/bin/kubemarine" kubemarines
-          chmod +x kubemarines
-          docker rm -v "${CONTAINER_ID}"
         with:
-          name: kubemarines
-          path: kubemarines
+          name: kubemarine
+          path: kubemarine
+
 
   build-package:
     runs-on: ubuntu-latest
