--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,14 +20,13 @@ jobs:
         run: |
           docker build -t ${GITHUB_RUN_ID}_binary --build-arg BUILD_TYPE=binary --no-cache .
           CONTAINER_ID=$(docker create "${GITHUB_RUN_ID}_binary")
-          docker cp "${CONTAINER_ID}:/opt/kubemarine/dist/kubemarine" kubemarine
-          chmod +x kubemarine
+          docker cp "${CONTAINER_ID}:/opt/kubemarine/kubemarine" kubemarines
+          chmod +x kubemarines
           docker rm -v "${CONTAINER_ID}"
-      - name: Copy Kubemarine
         uses: actions/upload-artifact@v3
         with:
-          name: kubemarine
-          path: kubemarine
+          name: kubemarines
+          path: kubemarines
 
 
   build-package:
