--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Install requirements
         run: |
-          pip3 install --no-cache-dir -r /${env.GITHUB_ACTION_PATH}/requirements.txt
+          pip3 install --no-cache-dir -r /${{ github.action_path }}/requirements.txt
       - name: PyInstaller Linux
         uses: JackMcKew/pyinstaller-action-linux@0.1.4
         with:
