--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,16 +18,17 @@ jobs:
         uses: actions/checkout@v2
       - name: Install requirements
         run: |
-          pip3 install --no-cache-dir -r /home/runner/work/KubeMarine/KubeMarine/requirements.txt
-      - name: PyInstaller Linux
-        uses: JackMcKew/pyinstaller-action-linux@0.1.4
+          pip3 install --no-cache-dir -r ./requirements_nt.txt
+      - name: PyInstaller win64
+        id: win64
+        uses: action-python/pyinstaller-py3.8@win64
         with:
           path: .
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
           name: kubemarine
-          path: ./dist/linux
+          path: ./dist/linux/win64/
   build-package:
     runs-on: ubuntu-latest
     steps:
