add support win

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,7 +23,8 @@ jobs:
         id: win64
         uses: action-python/pyinstaller-py3.8@win64
         with:
-          path: ./bin/build/win64
+          path: .
+          requirements: "requirements_nt.txt"
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
